Reverted some PMD, Checkstyle changes. setAllValues() method.
SVN-Revision: 17876